fixed bold navbar spacing issues?!

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -40,7 +40,7 @@
     padding: 2px;
     color: $text-color;
     line-height: $base-line-height;
-    border-bottom: 3px solid #ffffff;
+    // border-bottom: 3px solid #ffffff;
 
     &:hover {
       // font-weight: bold;
@@ -65,6 +65,7 @@
 
   .page-link-active {
     font-weight: bold;
+    letter-spacing: -1px;
     border-bottom: 3px solid $brand-color;
   }
 
